--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
     - text: "About"
       href: index.html
     - text: "1C Company"
-      href: about.html
+      href: 1C.html
 output:
   html_document:
     theme: flatly
